<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:background="@android:color/white"
    android:padding="10dp">

    <ImageView
        android:contentDescription="@string/imagenAppContentDescription"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:transitionName="@string/transition_name_Image"
        android:id="@+id/imagenApp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:scaleType="centerCrop" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tools:text="Nombre App"
        android:id="@+id/textoTitulo"
        android:singleLine="true"
        android:transitionName="@string/transition_name_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imagenApp"
        android:layout_toEndOf="@+id/imagenApp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:transitionName="@string/transition_name_Descrip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="Descripción"
        android:id="@+id/textoDescripcion"
        android:maxLines="3"
        android:layout_below="@+id/textoTitulo"
        android:layout_alignStart="@+id/textoTitulo"
        android:layout_alignLeft="@+id/textoTitulo" />


<LinearLayout
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/labelArtista"
        android:text="@string/categoriaLabel"
        android:textSize="17sp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textoArtista"
        tools:text="Categoria"
        android:textStyle="bold"
        android:singleLine="true"
        android:transitionName="@string/transition_name_Cate"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>



</RelativeLayout>