<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jonny.grability.ui.AppsDetails">

    <TextView
        android:id="@+id/detailsTitle"
        tools:text="TITULO"
        android:transitionName="@string/transition_name_name"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/detailsImage"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:transitionName="@string/transition_name_Image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/detailsTitle"
        android:layout_marginTop="30dp"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"/>


<LinearLayout
    android:id="@+id/linear"
    android:layout_toEndOf="@+id/detailsImage"
    android:layout_toRightOf="@+id/detailsImage"
    android:orientation="vertical"
    android:layout_below="@+id/detailsTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:layout_above="@+id/detailsDescrip"
    >
    <TextView
        tools:text="Categoria"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_weight="1"
        android:transitionName="@string/transition_name_Cate"
        android:id="@+id/detailsCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        tools:text="Autor"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/detailsAutor"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>




    <TextView
        android:text="@string/descriptionDetails"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/decriptionLabel"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_below="@+id/detailsImage"
        android:layout_height="wrap_content"/>

    <TextView
        tools:text="descrip"
        android:id="@+id/detailsDescrip"
        android:layout_marginTop="20sp"
        android:layout_alignParentStart="true"
        android:transitionName="@string/transition_name_Descrip"
        android:layout_below="@+id/decriptionLabel"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>
</ScrollView>